# Orator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  dictionary.txt  pyproject.toml
.github/workflows/: ci.yml
backend/: asr.py  config.py  llm.py  main.py  models.py  pipeline.py  streaming.py  utils.py  vocabulary.py
backend/static/: index.html
client/: diagnostics.py  dictate.py  launcher.py  miccheck.py  overlay.py  platforms.py  toast.py
tests/: test_api.py  test_asr_selection.py  test_diagnostics.py  test_launcher.py  test_llm.py  test_overlay.py  test_pipeline.py  test_platforms.py  test_streaming.py  test_vocabulary.py
