[project]
name = "wisper"
version = "0.1.0"
description = "Voice dictation backend — ASR + LLM cleanup"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Pavan Kumar", email = "pavankumarv888@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "anthropic>=0.105.2",
    "deepgram-sdk>=7.3.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pydantic-settings>=2.14.1",
    "pynput>=1.8.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sounddevice>=0.5.5",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.urls]
Homepage = "https://github.com/Nikhillllllllll/Orator"
Repository = "https://github.com/Nikhillllllllll/Orator"
Issues = "https://github.com/Nikhillllllllll/Orator/issues"

[project.optional-dependencies]
# Offline ASR — `uv sync --extra local`
local = [
    "faster-whisper>=1.1.0",
]
# Apple-Silicon-optimized Whisper — `uv sync --extra mlx` (installs only on Apple Silicon)
mlx = [
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced as a lint error
    "B008",  # FastAPI relies on function calls (File/Form/Depends) in argument defaults
]
